Server side working well, client starts, has sone issues with day period choosing process